ref: fixing UI for dark mode

--- a/app/components/styles/education.module.css
+++ b/app/components/styles/education.module.css
@@ -62,7 +62,7 @@
     right: 30px;
     border: medium solid white;
     border-width: 10px 0 10px 10px;
-    border-color: transparent transparent transparent white;
+    border-color: transparent transparent transparent lightgray;
   }
   
   /* Add arrows to the right container (pointing left) */
@@ -76,7 +76,7 @@
     left: 30px;
     border: medium solid white;
     border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
+    border-color: transparent lightgray transparent transparent;
   }
   
   /* Fix the circle for containers on the right side */
@@ -87,7 +87,6 @@
   /* The actual content */
   .content {
     padding: 20px 30px;
-    background-color: white;
     position: relative;
     border-radius: 6px;
     display: flex;
